[package]
name = "interviewer"
version = "0.1.0"
edition = "2021"
authors = ["Mišo Barišić <me@misobarisic.com"]
license = "MIT"
description = "Simple CLI prompting crate"
repository = "https://github.com/misobarisic/interviewv.rs"
keywords = ["prompt", "cli"]
categories = ["command-line-interface"]
readme = "README.md"

[dependencies]
custom_error = "1.9.2"
lazy_static = "1.4.0"
rustyline = "10.0.0"

[dev-dependencies]
criterion = { version = "0.3.6", features = ["html_reports"] }

[[bench]]
name = "test"
harness = false